testsuite/tests/properties/dynvars/test.out
== default_default/test.lkt ==
Code generation was successful

== default_novar/test.lkt ==
Code generation was successful

== default_var/test.lkt ==
test.lkt:13:22: error: Requested set of dynamically bound variables is not consistent with the property to override: AbstractNode.prop
13 |     @with_dynvars(v) fun prop(): Int = 12
   |                      ^^^^^^^^^^^^^^^^^^^^


== novar_default/test.lkt ==
Code generation was successful

== novar_novar/test.lkt ==
Code generation was successful

== novar_var/test.lkt ==
test.lkt:13:22: error: Requested set of dynamically bound variables is not consistent with the property to override: AbstractNode.prop
13 |     @with_dynvars(v) fun prop(): Int = 12
   |                      ^^^^^^^^^^^^^^^^^^^^


== var_default/test.lkt ==
Code generation was successful

== var_default_use/test.lkt ==
Code generation was successful

== var_novar/test.lkt ==
test.lkt:12:21: error: Requested set of dynamically bound variables is not consistent with the property to override: AbstractNode.prop
12 |     @with_dynvars() fun prop(): Int = 12
   |                     ^^^^^^^^^^^^^^^^^^^^


== var_var/test.lkt ==
Code generation was successful

lkt_compile: Done
